--- a/5-sol/definiciones.tex
+++ b/5-sol/definiciones.tex
@@ -61,6 +61,7 @@
 \newcommand{\divset}[2]{\mathcal{D}(#1) = \set{#2}}
 \newcommand{\divsetP}[2]{\mathcal{D_+}(#1) = \set{#2}}
 \newcommand{\ub}[2]{ \underbrace{#1}_{#2} }
+\newcommand{\ob}[2]{ \overbrace{#1}^{#2} }
 \def\cop{\, \perp \, }
 
 
