--- a/5-sol/5-sol.tex
+++ b/5-sol/5-sol.tex
@@ -26,6 +26,7 @@
 \usepackage{bbding} % símbolos de donde uso FiveStar
 \usepackage{skull} % símbolos de donde uso Skull
 % \usepackage{lipsum}
+\usepackage{soul}
 
 % para hacer los graficos tipo grafos
 \usetikzlibrary{shapes,arrows.meta, chains, matrix, calc, trees, positioning, fit}
@@ -224,9 +225,183 @@ $\llaves{c}{
 $\congruencia{a}{22}{35} \flecha{quiero los restos}[pedidos del enunciado] r_{70}(a) = \set{22, 57}$,
 valores de $a$ que cumplan condición de $r_{70}(a)$
 
+
+
+
 \ejercicio
+
 Sea $a \en \enteros$ tal que $(a^{197} - 26 : 15) = 1$. Hallar los posibles valores de
-$(a^{97} - 36 : 135)$
+$(a^{97} - 36 : 135)$\\
+\separadorCorto
+Tengo que dar posible valores para $(a^{97} - 36 : 135)$. Como $135 = 3^3\cdot 5$,
+los posibles valores serán de la forma $3^\alpha \cdot 5^\beta$ con
+$ \llaves{l}{
+		0 \leq \alpha \leq 3\\
+		0 \leq \beta \leq 1\\
+	}$ potencialmente $\ub{8}{(3+1)\cdot (1+1)} $posibles valores distintos $\set{1, 3, 9, 27, 5, 15, 45, 135}$\\
+Como condición mínima para que no sea siempre $(a^{97} - 36 : 135) = 1$ es que
+$\llaves{c}{
+		3 \divide a^{97} - 36\\
+		\text{o bien,}\\
+		5 \divide a^{97} - 36
+	}$ si no ocurre ninguna de éstas el MCD será 1.\\
+
+$\llave{l}{
+		5 \divide a^{97} - 36 \to a^{97} - 36 \conga{5} a^{97} -1 \conga5 0
+		\to
+		\llave{ll}{
+			\flecha{si}[$5 \divide a$] & \congruencia{-1}{0}{5}
+			\flecha{ningún $a$ tal que}[$5 \divide a$ logra que] 5 \divide a^{97} - 36 \\
+
+			\flecha{si}[$5 \noDivide a$] & \congruencia{(a^4)^{24} \cdot a -1 }{0}{5}
+			\flecha{5 primo, $5 \noDivide a$}[$\congruencia{a^4}{1}{5}$]
+			\boxed{\congruencia{a}{1}{5}}
+		}\\
+		\text{Se concluye de esta rama que si } 5 \divide a^{97} - 36
+		\entonces
+		\boxed{\congruencia{a}{1}{5}}\llamada3 \Tilde \\
+
+		\separadorCorto
+
+		3 \divide a^{97} - 36 \to a^{97} - 36 \conga{3} a^{97} \conga3 0
+		\to
+		\llave{ll}{
+			\flecha{si}[$3 \divide a$] & \congruencia{0}{0}{3}
+			\flecha{dado que en}[esta rama $a \divide 3$] \boxed{ \congruencia{a}{0}{3} } \\
+			\flecha{si}[$3 \noDivide a$] & \congruencia{(a^2)^{48} \cdot a}{0}{3}
+			\flecha{3 primo, $3 \noDivide a$}[$\congruencia{a^2}{1}{3} $]
+			\boxed{\congruencia{a}{0}{3}}
+		}\\
+		\text{Se concluye de esta rama que si } 3 \divide a^{97} - 36
+		\entonces
+		\boxed{\congruencia{a}{0}{3}}\llamada4 \Tilde
+	}$\\
+
+Todo muy lindo pero los valores de $a$ están condicionados por  $(a^{197} - 26 : 15) = 1$
+una condición que "nada" tiene que ver con el MCD, pero que condiciona los valores que puede
+tomar $a$. Como $a^{197} - 26 $ y $15 = 3 \cdot 5$ son coprimos sus factorizaciones en primos
+no pueden tener ningún número factor en común, dicho de otra forma:
+$\llaves{c}{
+		5 \noDivide  a^{197} - 26 \\
+		\text{ y } \\
+		3 \noDivide  a^{197} - 26
+	}$ estudiar estas condiciones me va a restringir los valores de $a$ que puedo usar para construir
+los posibles MCDs.\\
+
+$\llave{l}{
+		\flecha{\magenta{supongo} $5\divide a^{197} - 26$ y me}[\magenta{quedo con el complemento}]
+		a^{197} - 1 \conga{5} 0
+		\to
+		\llave{l}{
+			\flecha{si}[$5 \divide a$]
+			\congruencia{-1}{0}{5}
+			\flecha{\green{ningún} $a$ tal que}[$5 \divide a$ logra que] 5 \divide a^{197} - 26 \\
+			\flecha{el \magenta{complemento de "\green{ningún}" es }}[\magenta{todo $a$} pero como $5\divide a$]
+			\congruencia{a}{0}{5}\\
+			\separadorCorto
+			\flecha{si}[$5 \noDivide a$]
+			\congruencia{(a^4)^{49} \cdot a - 1}{0}{5}
+			\flecha{5 primo, $5\noDivide a$}[$\congruencia{a^4}{1}{5}$]
+			\congruencia{a}{1}{5}\llamada1\\
+			\flecha{agarro el}[complemento de $\llamada1$]
+			\llave{l}{
+				\hbox{\sout{$\congruencia{a}{0}{5}$}} \to \text{rama $5\noDivide a$} \\
+				\congruencia{a}{2}{5} \\
+				\congruencia{a}{3}{5} \\
+				\congruencia{a}{4}{5} \\
+			}
+		}\\
+
+		\separadorCorto
+
+		\flecha{\magenta{supongo} $3\divide a^{197} - 26$ y me}[\magenta{quedo con el complemento}]
+		a^{197} - 2 \conga{3} 0
+		\to
+		\llave{l}{
+			\flecha{si}[$3 \divide a$]
+			\congruencia{-2}{0}{3}
+			\flecha{\green{ningún} $a$ tal que}[$3 \divide a$ logra que] 3 \divide a^{197} - 26 \\
+			\flecha{el \magenta{complemento de "\green{ningún}" es }}[\magenta{todo $a$} pero como $3\divide a$]
+			\congruencia{a}{0}{3}\\
+			\separadorCorto
+			\flecha{si}[$3 \noDivide a$]
+			\congruencia{(a^2)^{93} \cdot a - 2}{0}{3}
+			\flecha{3 primo, $3\noDivide a$}[$\congruencia{a^2}{2}{3}$]
+			\congruencia{a}{2}{3}\llamada2\\
+			\flecha{agarro el}[complemento de $\llamada2$]
+			\llave{l}{
+				\hbox{\sout{$\congruencia{a}{0}{3}$}} \to \text{rama $3\noDivide a$} \\
+				\congruencia{a}{1}{3}
+			}
+		}\\
+
+	}$\\
+\text{Se concluye del estudio que si } $5 \noDivide a^{197} - 26$ y
+$3 \noDivide a^{197} - 26 \to $
+\boxed{
+	\llave{cr}{
+		\congruencia{a}{0}{5} & \text{ o }\\
+		\congruencia{a}{2}{5} & \text{ o }\\
+		\congruencia{a}{3}{5} & \text{ o }\\
+		\congruencia{a}{4}{5}\\
+		\text{ y }&\\
+		\congruencia{a}{0}{3} & \text{ o }\\
+		\congruencia{a}{1}{3}
+	}
+}, 8 sistemas $\skull$ \\
+
+Para que el MCD \textit{no sea 1}, se deben satisfacer $\llamada3$ o $\llamada4$, lo cual no ocurre
+nunca con $\llamada3$. Eso acota los valores de $(a^{97} - 36 : 135)$ a $\set{1,3,9,27}$\\
+De los 4 sistemas útiles:\\
+$
+	\llave{l}{
+		\congruencia{a}{0}{5}\\
+		\congruencia{a}{0}{3}
+	}
+	\flecha{solución} \congruencia{a}{0}{15}\flecha{con $a = 0$}
+	\llave{l}{
+		0^{97} - 36 \conga{3} 0\\
+		0^{97} - 36 \conga{9} 0 \Tilde\\
+		0^{97} - 36 \conga{27} - 9 \not\conga{27} 0 \\
+	}
+	\\
+	\llave{l}{
+		\congruencia{a}{2}{5}\\
+		\congruencia{a}{0}{3}
+	}
+	\flecha{solución} \congruencia{a}{12}{15}
+	\flecha{con $a = 12$}
+	\llave{l}{
+		12^{97} - 36 \conga{3} 0\\
+		12^{97} - 36 \conga{9} 4^{97} \cdot (3^2)^{48} \cdot 3 \conga9 0 \Tilde\\
+		12^{97} - 36 \conga{27} 4^{97} \cdot (3^3)^{32} \cdot 3^1 - 9 \conga{27} -9 \not\conga{27} 0 \\
+	}
+	\\
+	\llave{l}{
+		\congruencia{a}{3}{5}\\
+		\congruencia{a}{0}{3}
+	}
+	\flecha{solución} \congruencia{a}{3}{15}
+	\\
+	\llave{l}{
+		\congruencia{a}{4}{5}\\
+		\congruencia{a}{0}{3}
+	}
+	\flecha{solución} \congruencia{a}{9}{15}
+	\flecha{con $a = 9$}
+	\llave{l}{
+		9^{97} - 36 \conga{3} 0\\
+		9^{97} - 36 \conga{9} 0 \to (9^{97} - 36:135) = 9 \Tilde\\
+		9^{97} -36 \conga{27} (3^3)^{64} \cdot 3^2 - 9 \conga{27} -9 \not\conga{27} 0 \\
+	}\\
+$
+
+\noindent Después de fumarme eso: $(a^{97} - 36 : 135) \en\set{1,9}$, porque todas las soluciones cumplen que:\\
+$3 \divide a^{97} \entonces 9 \divide a^{97}\entonces 27 \divide a^{97}$ y como $9 \divide 36$ y $27 \noDivide 36$
+siempre el mayor divisor de la expresión va a ser 9.
+
+\red{No estoy súper convencido. ¿Podría ocurrir que en algún caso de 27?}\\
+
 \newpage
 
 %=========================
@@ -517,7 +692,34 @@ Hallar el resto de la división de:
 		      }$ tiene solución $\congruencia{X}{24}{56}$, por lo tanto el \textit{resto pedido}: \boxed{ r_{56}\parentesis{\sumLocal i^{42}} = 24}
 \end{enumerate}
 
-\setcounter{ejercicio}{22}
+
+
+
+\setcounter{ejercicio}{21}
+%22
+\ejercicio
+Resolver en $\enteros$ la ecuación de congruencia $\congruencia{7X^{45}}{1}{46}$.
+
+\separadorCorto
+$\congruencia{7X^{45}}{1}{46}
+	\flecha{multiplico por}[13]
+	\congruencia{91X^{45}}{13}{46}
+	\to \congruencia{X^{45}}{-13}{46}
+	\to \congruencia{X^{45}}{33}{46}\\
+	\to
+	\llave{l}{
+		\congruencia{X^{45}}{33}{23} \to\congruencia{X^{45}}{10}{23} 
+		\flecha{23 primo y $23\noDivide X$}[$\congruencia{X^{22}}{1}{23}$]
+		X^{22} X^{22} X^{1} \conga{23} \congruencia{X}{10}{23}\\
+
+		\congruencia{X^{45}}{10}{2} \to  \congruencia{X^{45}}{0}{2}
+		\flecha{$X$ multiplicado por}[si mismo impar veces]
+		\congruencia{X}{0}{2}\\
+	}
+$\\
+  La ecuación de congruencia \boxed{\congruencia{X}{10}{46}} cumple las condiciones encontradas.
+
+% 23
 \ejercicio Hallar todos los divisores positivos de $25^{70}$ que sean congruentes a 2 módulo 9 y 3 módulo 11.
 \separadorCorto
 Quiero que ocurra algo así:
@@ -545,8 +747,7 @@ $\to \text{Usaré viejo truco de exponenciales de módulo periódicas:}\\
 			r_6(\alpha)   & 0 & 1 & 2 & 3 & 4 & 5       \\ \hline
 			r_9(5^\alpha) & 1 & 5 & 7 & 8 & 4 & \red{2} \\ \hline
 		\end{array}\\
-		\flecha{por lo}[tanto] \text{para que } \congruencia{5^\alpha}{2}{9} \entonces \boxed{\congruencia{\alpha}{5}{9}}     \\
-
+		\flecha{por lo}[tanto] \text{para que } \congruencia{5^\alpha}{2}{9} \entonces \boxed{\congruencia{\alpha}{5}{9}}\Tilde     \\
 
 		\separadorCorto
 
@@ -554,22 +755,28 @@ $\to \text{Usaré viejo truco de exponenciales de módulo periódicas:}\\
 		\flecha{fermateo}[11 es primo, $11\noDivide 5$]
 		\congruencia{\green{$5^{10}$}}{1}{11}
 		\flecha{noto que tengo otro}[cuando hago $5^{12}$]
-        \congruencia{\magenta{$5^2$} \cdot \green{$5^{10}$}}{3}{11}
-        \flecha{tiene pinta de $\congruencia{\alpha}{2}{10}$}[tabla de restos por si acaso]\\
+		\congruencia{\magenta{$5^2$} \cdot \green{$5^{10}$}}{3}{11}\\
+		\flecha{para no perder soluciones de $\congruencia{5^\alpha}{3}{11} $}[tabla de restos por las dudas]
 		\begin{array}{|l|l|l|l|l|l|l|l|l|l|l|}
 			\hline
-            r_{10}(\alpha)   & 0 & 1 & 2 & 3 & 4 & 5 & 6  & 7 & 8 & 9 \\ \hline
-            r_{11}(5^\alpha) & 1 & 5 & 3 & 4 & 9 & 2 & 10 & 6 & 8 & 7 \\ \hline
+			r_{10}(\alpha)   & 0 & 1 & 2       & 3 & 4 & 5        \\ \hline
+			r_{11}(5^\alpha) & 1 & 5 & \red{3} & 4 & 9 & \cyan{1} \\ \hline
 		\end{array}\\
-		\flecha{por lo}[tanto] \text{para que } \congruencia{5^\alpha}{3}{11}
-        \entonces
-        \boxed{\congruencia{\alpha}{2}{10}} \\
+		\flecha{por lo tanto hay}[periodicidad de 5] \text{para que } \congruencia{5^\alpha}{3}{11}
+		\entonces
+		\boxed{\congruencia{\alpha}{2}{5}} \Tilde\\
 	}$\\
-    El sistema se resuelve para $\congruencia{\alpha}{32}{90}$ y además $0<\alpha \leq 140$ lo que se
-    cumple para $\alpha = 32k + 90 = 
-    \llaves{ll}{
-      90 \text{ si } k = 0\\
-      122 \text{ si } k = 1  
-    } \to \boxed{\divsetP{25^{70}}{ 25^{45}, 25^{61} }} = \set{5^{90}, 5^{122} }  $ 
+El sistema
+$\llave{l}{
+		\congruencia{\alpha}{5}{9} \\
+		\congruencia{\alpha}{2}{5}
+	}$
+se resuelve para $\congruencia{\alpha}{32}{45}$ y además $0<\alpha \leq 140$ lo que se
+cumple para $\alpha = 45k + 32 =
+	\llaves{lcr}{
+		32  &  \text{ si } & k = 0\\
+		77  &  \text{ si } & k = 1 \\
+		122 &  \text{ si } & k = 2
+	} \to \boxed{\divsetP{25^{70}}{ 5^{32}, 5^{77}, 5^{122} }}  $
 
 \end{document}
