--- a/5-sol/5-sol.tex
+++ b/5-sol/5-sol.tex
@@ -52,7 +52,7 @@
 \begin{itemize}
 	\item Sea $aX + bY = c \text{ con } a,\, b,\, c \en \enteros,\, a \distinto 0 \y b \distinto 0$ y sea
 	      $S = \set{ (x,y) \en \enteros^2 : aX + bY = C }$.\\
-	      Entonces $S \distinto \vacio \sisolosi (a:b) \divide c$
+	      Entonces $S \distinto \vacio \sisolosi (a:b) \dividea c$
 	      % \sisolosi
 	      %  \ub{A}{\frac{a}{\mcd}} x + \ub{B}{\frac{b}{\mcd}} y = \ub{C}{\frac{c}{(a:b)}} \en \enteros$,
 	      % \text{también tiene solución para $x$ y $y$.}
@@ -65,7 +65,7 @@
 			      , k \en \enteros}
 	      $
 
-	\item $\congruencia{aX}{c}{b}$ con $ a,\, b \distinto 0$ tiene solución $\sisolosi \mcd \divide c$ tiene solución $\sisolosi \mcd \divide c$. En ese caso, coprimizando:
+	\item $\congruencia{aX}{c}{b}$ con $ a,\, b \distinto 0$ tiene solución $\sisolosi \mcd \dividea c$ tiene solución $\sisolosi \mcd \dividea c$. En ese caso, coprimizando:
 \end{itemize}
 
 \textit\underline{Ecuaciones de congruencia}
@@ -74,7 +74,7 @@
 	\item Algoritmo de solución:
 	      \begin{enumerate}[label=\arabic*)]
 		      \item reducir $a,\, c$ módulo $m$. Podemos suponer $0 \leq a, c < m$
-		      \item tiene solución $\sisolosi (a:m) \divide c$. Y en ese caso coprimizo:
+		      \item tiene solución $\sisolosi (a:m) \dividea c$. Y en ese caso coprimizo:
 		            \[
 			            \congruencia{aX}{c}{m} \sisolosi \congruencia{a'X}{c'}{m},\ \text{ con } a' = \frac{a}{(a:m)},\, m' = \frac{m}{(a:m)} \text{ y } c' = \frac{c}{(a:m)}
 		            \]
@@ -123,7 +123,7 @@ para algún $x_0$ con $0\leq x_0 < m_1\cdot m_2 \cdots m_n$
 	\item Sea $a \en \enteros$ y $p > 0$ primo tal que $\ub{(a:p) = 1}{a \cop p}$, y sea  $d \en \naturales$ con $d \leq p-1$
 	      el mínimo tal que:
 	      \[
-		      \congruencia{a^d}{1}{p} \entonces d \divide (p-1)
+		      \congruencia{a^d}{1}{p} \entonces d \dividea (p-1)
 	      \]
 \end{itemize}
 \textit{\underline{Aritmética modular:}}
@@ -149,43 +149,43 @@ sabiendo que $(a^{1081}+ 3a + 17 : 105) = 35$\\
 $ (\ub{a^{1081}+ 3a + 17}{m} : \ub{105}{3\cdot 5 \cdot 7})  = \ub{35}{5 \cdot 7}
 	\flecha{notar}[que]
 	\llave{l}{
-		5 \divide m\\
-		7 \divide m\\
+		5 \dividea m\\
+		7 \dividea m\\
 		3 \noDivide m \red{ \tiny $\to$ ¡He aquí la más importante info!}
 	}\\
 	\llave{l}{
-		5 \divide m
+		5 \dividea m
 		\to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{5} 2}}{0}{5}
 		\to
 		\llave{ll}{
-			\text{si} & 5 \divide a \to \congruencia{2}{0}{5} \magenta{ ningún $a$ } \skull  \\
+			\text{si} & 5 \dividea a \to \congruencia{2}{0}{5} \magenta{ ningún $a$ } \skull  \\
 			\text{si} & 5 \noDivide a
 			\flecha{$a^{1081} = a \cdot (a^4)^{270}$}[5 primo y $5 \noDivide a$, fermateo]
 			\congruencia{a + 3a + 2}{0}{5} \to \congruencia{a}{2}{5}\\
-			& \text{si } 5 \divide m \entonces \boxed{\congruencia{a}{2}{5}}\Tilde
+			& \text{si } 5 \dividea m \entonces \boxed{\congruencia{a}{2}{5}}\Tilde
 		}
 		\\
-		7 \divide m
+		7 \dividea m
 		\to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{7} 3}}{0}{7}
 		\to
 		\llave{ll}{
-			\text{si} & 7 \divide a \to \congruencia{3}{0}{7} \magenta{ ningún $a$ } \skull  \\
+			\text{si} & 7 \dividea a \to \congruencia{3}{0}{7} \magenta{ ningún $a$ } \skull  \\
 			\text{si} & 7 \noDivide a
 			\flecha{$a^{1081} = a \cdot (a^6)^{180}$}[7 primo y $7 \noDivide a$, fermateo]
 			\congruencia{a + 3a + 3}{0}{7} \to \congruencia{4a}{-3}{7}\\
-			& \text{si } 7 \divide m \entonces \boxed{\congruencia{a}{1}{7}}\Tilde
+			& \text{si } 7 \dividea m \entonces \boxed{\congruencia{a}{1}{7}}\Tilde
 		}
 		\\
 		3 \noDivide m
 		\to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{3} 2}}{0}{3}
 		\to
 		\llave{ll}{
-			\text{si} & 3 \divide a \to \congruencia{2}{0}{3}
-			% \flecha{$3\noDivide m$ y $3 \divide a$}
+			\text{si} & 3 \dividea a \to \congruencia{2}{0}{3}
+			% \flecha{$3\noDivide m$ y $3 \dividea a$}
 			\llave{l}{
-				\text{si } 3 \divide m \to \congruencia{2}{0}{3} \to \text{\magenta{ningún $a$} $\skull$ , pero } \\
+				\text{si } 3 \dividea m \to \congruencia{2}{0}{3} \to \text{\magenta{ningún $a$} $\skull$ , pero } \\
 				\text{quiero } 3 \noDivide m \entonces \magenta{todo $a$} \text{, pero en esta rama}\\
-				3 \divide a \entonces \text{si } 3\noDivide m \to \boxed{\congruencia{a}{0}{3}} \Tilde
+				3 \dividea a \entonces \text{si } 3\noDivide m \to \boxed{\congruencia{a}{0}{3}} \Tilde
 
 			}\\
 			\text{si} & 3 \noDivide a
@@ -241,38 +241,38 @@ $ \llaves{l}{
 	}$ potencialmente $\ub{8}{(3+1)\cdot (1+1)} $posibles valores distintos $\set{1, 3, 9, 27, 5, 15, 45, 135}$\\
 Como condición mínima para que no sea siempre $(a^{97} - 36 : 135) = 1$ es que
 $\llaves{c}{
-		3 \divide a^{97} - 36\\
+		3 \dividea a^{97} - 36\\
 		\text{o bien,}\\
-		5 \divide a^{97} - 36
+		5 \dividea a^{97} - 36
 	}$ si no ocurre ninguna de éstas el MCD será 1.\\
 
 $\llave{l}{
-		5 \divide a^{97} - 36 \to a^{97} - 36 \conga{5} a^{97} -1 \conga5 0
+		5 \dividea a^{97} - 36 \to a^{97} - 36 \conga{5} a^{97} -1 \conga5 0
 		\to
 		\llave{ll}{
-			\flecha{si}[$5 \divide a$] & \congruencia{-1}{0}{5}
-			\flecha{ningún $a$ tal que}[$5 \divide a$ logra que] 5 \divide a^{97} - 36 \\
+			\flecha{si}[$5 \dividea a$] & \congruencia{-1}{0}{5}
+			\flecha{ningún $a$ tal que}[$5 \dividea a$ logra que] 5 \dividea a^{97} - 36 \\
 
 			\flecha{si}[$5 \noDivide a$] & \congruencia{(a^4)^{24} \cdot a -1 }{0}{5}
 			\flecha{5 primo, $5 \noDivide a$}[$\congruencia{a^4}{1}{5}$]
 			\boxed{\congruencia{a}{1}{5}}
 		}\\
-		\text{Se concluye de esta rama que si } 5 \divide a^{97} - 36
+		\text{Se concluye de esta rama que si } 5 \dividea a^{97} - 36
 		\entonces
 		\boxed{\congruencia{a}{1}{5}}\llamada3 \Tilde \\
 
 		\separadorCorto
 
-		3 \divide a^{97} - 36 \to a^{97} - 36 \conga{3} a^{97} \conga3 0
+		3 \dividea a^{97} - 36 \to a^{97} - 36 \conga{3} a^{97} \conga3 0
 		\to
 		\llave{ll}{
-			\flecha{si}[$3 \divide a$] & \congruencia{0}{0}{3}
-			\flecha{dado que en}[esta rama $a \divide 3$] \boxed{ \congruencia{a}{0}{3} } \\
+			\flecha{si}[$3 \dividea a$] & \congruencia{0}{0}{3}
+			\flecha{dado que en}[esta rama $a \dividea 3$] \boxed{ \congruencia{a}{0}{3} } \\
 			\flecha{si}[$3 \noDivide a$] & \congruencia{(a^2)^{48} \cdot a}{0}{3}
 			\flecha{3 primo, $3 \noDivide a$}[$\congruencia{a^2}{1}{3} $]
 			\boxed{\congruencia{a}{0}{3}}
 		}\\
-		\text{Se concluye de esta rama que si } 3 \divide a^{97} - 36
+		\text{Se concluye de esta rama que si } 3 \dividea a^{97} - 36
 		\entonces
 		\boxed{\congruencia{a}{0}{3}}\llamada4 \Tilde
 	}$\\
@@ -289,14 +289,14 @@ $\llaves{c}{
 los posibles MCDs.\\
 
 $\llave{l}{
-		\flecha{\magenta{supongo} $5\divide a^{197} - 26$ y me}[\magenta{quedo con el complemento}]
+		\flecha{\magenta{supongo} $5\dividea a^{197} - 26$ y me}[\magenta{quedo con el complemento}]
 		a^{197} - 1 \conga{5} 0
 		\to
 		\llave{l}{
-			\flecha{si}[$5 \divide a$]
+			\flecha{si}[$5 \dividea a$]
 			\congruencia{-1}{0}{5}
-			\flecha{\green{ningún} $a$ tal que}[$5 \divide a$ logra que] 5 \divide a^{197} - 26 \\
-			\flecha{el \magenta{complemento de "\green{ningún}" es }}[\magenta{todo $a$} pero como $5\divide a$]
+			\flecha{\green{ningún} $a$ tal que}[$5 \dividea a$ logra que] 5 \dividea a^{197} - 26 \\
+			\flecha{el \magenta{complemento de "\green{ningún}" es }}[\magenta{todo $a$} pero como $5\dividea a$]
 			\congruencia{a}{0}{5}\\
 			\separadorCorto
 			\flecha{si}[$5 \noDivide a$]
@@ -314,14 +314,14 @@ $\llave{l}{
 
 		\separadorCorto
 
-		\flecha{\magenta{supongo} $3\divide a^{197} - 26$ y me}[\magenta{quedo con el complemento}]
+		\flecha{\magenta{supongo} $3\dividea a^{197} - 26$ y me}[\magenta{quedo con el complemento}]
 		a^{197} - 2 \conga{3} 0
 		\to
 		\llave{l}{
-			\flecha{si}[$3 \divide a$]
+			\flecha{si}[$3 \dividea a$]
 			\congruencia{-2}{0}{3}
-			\flecha{\green{ningún} $a$ tal que}[$3 \divide a$ logra que] 3 \divide a^{197} - 26 \\
-			\flecha{el \magenta{complemento de "\green{ningún}" es }}[\magenta{todo $a$} pero como $3\divide a$]
+			\flecha{\green{ningún} $a$ tal que}[$3 \dividea a$ logra que] 3 \dividea a^{197} - 26 \\
+			\flecha{el \magenta{complemento de "\green{ningún}" es }}[\magenta{todo $a$} pero como $3\dividea a$]
 			\congruencia{a}{0}{3}\\
 			\separadorCorto
 			\flecha{si}[$3 \noDivide a$]
@@ -397,7 +397,7 @@ $
 $
 
 \noindent Después de fumarme eso: $(a^{97} - 36 : 135) \en\set{1,9}$, porque todas las soluciones cumplen que:\\
-$3 \divide a^{97} \entonces 9 \divide a^{97}\entonces 27 \divide a^{97}$ y como $9 \divide 36$ y $27 \noDivide 36$
+$3 \dividea a^{97} \entonces 9 \dividea a^{97}\entonces 27 \dividea a^{97}$ y como $9 \dividea 36$ y $27 \noDivide 36$
 siempre el mayor divisor de la expresión va a ser 9.
 
 \red{No estoy súper convencido. ¿Podría ocurrir que en algún caso de 27?}\\
@@ -415,18 +415,18 @@ siempre el mayor divisor de la expresión va a ser 9.
 
 %2
 \ejercicio
-Determinar todos los $(a,b)$ que simultáneamente $4 \divide a,\, 8 \divide b \y 33a + 9b = 120$.
+Determinar todos los $(a,b)$ que simultáneamente $4 \dividea a,\, 8 \dividea b \y 33a + 9b = 120$.
 
 \separadorCorto
-Si $(33:9) \divide 120 \entonces 33a + 9b = 120$ tiene solución. $(33:9)=3,\, 3 \divide 120$\Tilde\\
+Si $(33:9) \dividea 120 \entonces 33a + 9b = 120$ tiene solución. $(33:9)=3,\, 3 \dividea 120$\Tilde\\
 $
 	\llave{l}{
-		4 \divide a \to a = 4k_1\\
-		8 \divide b \to b = 8k_2
+		4 \dividea a \to a = 4k_1\\
+		8 \dividea b \to b = 8k_2
 	}
 	\flecha{meto en}[$33a + 9b = 120$]
 	132 k_1 + 72 k_2 = 120
-	\flecha{$(132:72) = 12 \divide 120$}[coprimizo]
+	\flecha{$(132:72) = 12 \dividea 120$}[coprimizo]
 	11 k_1 + 6 k_2 = 10$ \\
 
 \noindent Busco solución particular con algo parecido a Euclides:\\
@@ -510,7 +510,7 @@ Parecido al \textbf{2.}.\\
 $ \congruencia{b}{2a}{5} \sisolosi b = 5k + 2a
 	\flecha{meto en}[$28a + 10b = 26$]
 	48a + 50k = 26
-	\flecha{$(48:59) = 2$}[$2 \divide 26$]
+	\flecha{$(48:59) = 2$}[$2 \dividea 26$]
 	24a + 25k = 13
 	\flecha{a}[ojo]
 	\llaves{l}{
@@ -708,7 +708,7 @@ $\congruencia{7X^{45}}{1}{46}
 	\to \congruencia{X^{45}}{33}{46}\\
 	\to
 	\llave{l}{
-		\congruencia{X^{45}}{33}{23} \to\congruencia{X^{45}}{10}{23} 
+		\congruencia{X^{45}}{33}{23} \to\congruencia{X^{45}}{10}{23}
 		\flecha{23 primo y $23\noDivide X$}[$\congruencia{X^{22}}{1}{23}$]
 		X^{22} X^{22} X^{1} \conga{23} \congruencia{X}{10}{23}\\
 
@@ -717,7 +717,9 @@ $\congruencia{7X^{45}}{1}{46}
 		\congruencia{X}{0}{2}\\
 	}
 $\\
-  La ecuación de congruencia \boxed{\congruencia{X}{10}{46}} cumple las condiciones encontradas.
+La ecuación de congruencia \boxed{\congruencia{X}{10}{46}} cumple las condiciones encontradas.
+
+
 
 % 23
 \ejercicio Hallar todos los divisores positivos de $25^{70}$ que sean congruentes a 2 módulo 9 y 3 módulo 11.
