--- a/7-guia/definiciones.tex
+++ b/7-guia/definiciones.tex
@@ -7,7 +7,9 @@
 \def\reales{\mathbb R}
 \def\naturales{\mathbb N}
 \def\enteros{\mathbb Z}
+\def\racionales{\mathbb Q}
 \def\complejos{\mathbb C}
+\def\K{\mathbb K}
 \def\i{\text{i}}
 \def\vacio{\varnothing}
 \def\union{\cup}
@@ -52,7 +54,7 @@
 \newcommand{\kmasuno}[1]{\underbrace{#1}_{k+1\text{-ésimo}}}
 \newcommand{\HI}[1]{\underbrace{#1}_{\text{HI}}}
 
-% enteros
+% % enteros
 \def\dividea{\, | \,}
 \def\noDivide{\centernot\dividea}
 \def\congruente{\, \equiv \,}
