--- a/6-sol/definiciones.tex
+++ b/6-sol/definiciones.tex
@@ -57,7 +57,7 @@
 \newcommand{\HI}[1]{\underbrace{#1}_{\text{HI}}}
 
 % % enteros
-\def\dividea{\, | \,}
+\def\divideA{\, | \,}
 \def\noDivide{\centernot\dividea}
 \def\congruente{\, \equiv \,}
 \newcommand{\congruencia}[3]{#1 \equiv #2 \;(#3)}
