--- a/5-sol/5-sol.tex
+++ b/5-sol/5-sol.tex
@@ -126,17 +126,44 @@ para algún $x_0$ con $0\leq x_0 < m_1\cdot m_2 \cdots m_n$
 		      \congruencia{a^d}{1}{p} \entonces d \dividea (p-1)
 	      \]
 \end{itemize}
+
+
 \textit{\underline{Aritmética modular:}}
+
+% Macro local
+\newcommand{\moduloN}[1]{\enteros/_{#1\enteros}}
+% Fin macro local
+
 \begin{itemize}
 	\item Sea $n \en \naturales, n\geq2$\\
 	      $
-		      \enteros/_{n\enteros} = \set{\clase{0},\clase{1},\cdots, \clase{n-1} }\\
-		      \clase{a},\clase{b} \en \enteros\_{n\enteros}:
+		      \moduloN{n} = \set{\clase{0},\clase{1},\cdots, \clase{n-1} }\\
+		      \clase{a},\clase{b} \en \moduloN n:
 		      \llave{l}{
-		      \clase{a} \clase{+} \clase{b} := \overline{r_n^{a+b}} \\
-		      \clase{a} \clase{\cdot} \clase{b} := \overline{r_n^{a\cdot b}}
+			      \clase{a} \clase{+} \clase{b} := \overline{r_n(a+b)} \\
+			      \clase{a} \clase{\cdot} \clase{b} := \overline{r_n(a\cdot b)}
 		      }
 	      $
+	\item Sea $p$ primo, en $\moduloN{p}$ todo elemento no nulo tiene inverso multiplicativo,
+	      análogamente a $\enteros$.\\
+	      Si $m \en \naturales$ es compuesto,
+
+	      \begin{itemize}
+		      \item \textit{No todo} $\clase{a} \en \moduloN{m}$ con $\clase{a} \distinto \clase{0}$ es inversible.
+
+		      \item $\existe \clase{a}, \clase{b} \en \moduloN{m}$ con $\clase{a}, \clase{b} \distinto 0$ tal que
+		            $\clase{a}\cdot \clase{b} = \clase{0}$
+
+		      \item Inv$(\moduloN m) = \set{\clase{a} \en \set{\clase{0},\clase{1},\dots, \clase{m-1}}}$ tales que
+		            $a \cop m$
+	      \end{itemize}
+	\item Si $m = p$, con $p$ primo, todo elemento no nulo de $\moduloN p$ tiene inverso:
+	      \begin{itemize}
+		      \item Inv$(\moduloN p) = \set{\clase{1},\dots, \clase{p-1}}$.
+		      \item  \underline{$p$ primo $\entonces \moduloN p$ es un cuerpo.}
+              \item en $\moduloN{p}:\ (\clase{a} + \clase{b})^p = \clase{a}^p + \clase{b}^p $
+	      \end{itemize}
+
 \end{itemize}
 
 
